examples/errors/runtime/call_params.tab
f = fn() false;
f() / 0;
